[gd_scene load_steps=7 format=2]

[ext_resource path="res://VNTheme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/Graphics/GeneralUI/menu_background.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/orange-kid.regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GeneralUIScripts/LoadingScreen.gd" type="Script" id=4]
[ext_resource path="res://GeneralUIScenes/PopupPanel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="LoadingScreen" type="TextureRect"]
pause_mode = 2
margin_right = 1200.0
margin_bottom = 675.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 148.0
margin_right = 1348.0
margin_bottom = 868.0
rect_scale = Vector2( 0.75, 0.75 )
custom_constants/separation = 29
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1200.0
margin_bottom = 121.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 1200.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 1 )
text = "Pick a save to load"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ListContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 1200.0
margin_bottom = 599.0
custom_constants/margin_right = 30
custom_constants/margin_left = 50
__meta__ = {
"_editor_description_": ""
}

[node name="ItemList" type="ItemList" parent="VBoxContainer/ListContainer"]
margin_left = 50.0
margin_right = 1170.0
margin_bottom = 449.0
rect_min_size = Vector2( 0, 449 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 628.0
margin_right = 1200.0
margin_bottom = 801.0
custom_constants/margin_right = 30
custom_constants/margin_top = 16
custom_constants/margin_left = 37
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 37.0
margin_top = 16.0
margin_right = 1170.0
margin_bottom = 173.0

[node name="LoadButton" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
margin_right = 564.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
margin_left = 568.0
margin_right = 1133.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PopupPanel" parent="." instance=ExtResource( 5 )]
[connection signal="item_activated" from="VBoxContainer/ListContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
